# ToP-Revival-Public

./: .gitignore  Build-All.bat  CMake-All.bat  README.md
3DMindPowerEngine/: CMakeLists.txt
3DMindPowerEngine/Dependencies/VisualMotionD3D/: CMakeLists.txt
3DMindPowerEngine/Engine/include/: I_Effect.h  MPGameApp.h  MPRender.h  MPResourceSet.h
3DMindPowerEngine/Engine/src/: I_Effect.cpp  MPEffectCtrl.cpp  MPFont.cpp  MPGameApp.cpp  MPMap.cpp  MPModelEff.cpp  MPParticleCtrl.cpp  MPParticleSys.cpp  MPRender.cpp  MPResManger.cpp  lwAnimKeySetPRS.cpp  lwExpObj.cpp  lwFileutil.cpp  lwPrimitive.cpp  lwResourceMgr.cpp  lwShaderDeclMgr.cpp  lwgraphicsutil.cpp  stdafx.cpp
Client/: CMakeLists.txt
Client/Configuration/: Game.loc  chat.clu  zh_Hans_CN.res
Client/include/: CameraCtrl.h  Character.h  ChatIconSet.h  CreateChaScene.h  EffectSet.h  FindPath.h  GameApp.h  GlobalVar.h  LoginScene.h  MapSet.h  MonsterSet.h  NetChat.h  NetGuild.h  NetProtocol.h  PacketCmd.h  ProCirculate.h  SMallMap.h  STStateObj.h  Scene.h  SceneItem.h  SceneItemSet.h  SceneNode.h  SceneObj.h  SceneObjSet.h  SelectChaScene.h  ServerSet.h  StoneSet.h  UIChat.h  UICommand.h  UICozeForm.h  UIDoublePwdForm.h  UIEditData.h  UIEquipForm.h  UIFont.h  UIForgeForm.h  UIGlobalVar.h  UIGuiData.h  UIGuildMgr.h  UIHeadSay.h  UIItem.h  (+17 more)
Client/src/: Actor.cpp  CameraCtrl.cpp  ChaState.cpp  Character.cpp  Character.cpp.org  CharacterAction.cpp  CharacterModel.cpp  Connection.cpp  CreateChaScene.cpp  DSoundManager.cpp  EffectObj.cpp  FindPath.cpp  FlashPlayer.cpp  FrndInviteFormMgr.cpp  GameAppFrameMove.cpp  GameAppInit.cpp  GameAppInterface.cpp  GameAppMsg.cpp  GameAppNet.cpp  GameAppRender.cpp  GameConfig.cpp  GameLoading.cpp  GlobalVar.cpp  HMAttack.cpp  HMSynchroObj.cpp  IsSkillUse.cpp  LoginScene.cpp  MPEditor.cpp  Main.cpp  MouseDown.cpp  MusicThread.cpp  NPCHelper.cpp  NetChat.cpp  NetGuild.cpp  NetIF.cpp  NetPkChat.cpp  NetPkGuild.cpp  NetProtocol.cpp  PacketCmd_CS.cpp  PacketCmd_SC.cpp  (+84 more)
CommonDependencies/AudioSDL/: CMakeLists.txt
CommonDependencies/AudioSDL/doc/: vssver2.scc
CommonDependencies/AudioSDL/inc/: AudioSDL.h
CommonDependencies/AudioSDL/lib/: AudioSDL_d.lib  vssver2.scc
CommonDependencies/AudioSDL/proj/: mssccprj.scc
CommonDependencies/AudioSDL/src/: AudioSDL.cpp
CommonDependencies/CaLua/: CMakeLists.txt  CaLua 2.0 API Documentation.htm  readme.htm  vssver2.scc
CommonDependencies/CaLua/CaLua/: CaLua_main.c  mssccprj.scc  vssver2.scc
CommonDependencies/CaLua/CaLua 2.0 API Documentation_files/: header.htm  vssver2.scc
CommonDependencies/CaLua/Lua/: CMakeLists.txt  vssver2.scc
CommonDependencies/CaLua/LuaLib/: CMakeLists.txt
CommonDependencies/CaLua/TestLua/: mssccprj.scc  vssver2.scc
CommonDependencies/CaLua/include/: CaLua.h  vssver2.scc
CommonDependencies/CaLua/lib/: vssver2.scc
CommonDependencies/Common/: CMakeLists.txt
CommonDependencies/Common/Proj/: Common.ncb
CommonDependencies/Common/include/: CharacterRecord.h  CommFunc.h  EventRecord.h  ForgeRecord.h  HairRecord.h  ItemRecord.h  JobInitEquip.h  Kitbag.h  LevelRecord.h  LifeLvRecord.h  MonRefRecord.h  NetCommand.h  NpcRecord.h  SailLvRecord.h  ShipSet.h  SkillRecord.h  SkillStateRecord.h  StringLib.h  SwitchMapRecord.h  TableData.h  TerrainAttrib.h  i18n.h  vssver2.scc
CommonDependencies/Common/src/: ChaAttr.cpp  ChaMask.cpp  CharacterRecord.cpp  CommFunc.cpp  EventRecord.cpp  ForgeRecord.cpp  HairRecord.cpp  ItemRecord.cpp  JobInitEquip.cpp  LevelRecord.cpp  LifeLvRecord.cpp  MonRefRecord.cpp  NpcRecord.cpp  SailLvRecord.cpp  ShipSet.cpp  SkillRecord.cpp  SkillStateRecord.cpp  StringLib.cpp  SwitchMapRecord.cpp  TerrainAttrib.cpp  i18n.cpp  vssver2.scc
CommonDependencies/EncLib/: CMakeLists.txt
CommonDependencies/EncLib/include/: enclib.h
CommonDependencies/EncLib/lib/: EncLib.lib  EncLib_d.lib  vssver2.scc
CommonDependencies/EncLib/src/: enclib.cpp  vssver2.scc
CommonDependencies/ICUHelper/: CMakeLists.txt
CommonDependencies/ICUHelper/inc/: ResourceBundleManage.h  pi_Alloc.h  vssver2.scc
CommonDependencies/ICUHelper/proj/: ICUHelper.sln  mssccprj.scc
CommonDependencies/ICUHelper/src/: ResourceBundleManage.cpp
CommonDependencies/InfoNet/: CMakeLists.txt
CommonDependencies/InfoNet/include/: InfoNet.h  log.h  thread.h
CommonDependencies/InfoNet/src/: InfoNet.cpp  log.cpp  thread.cpp
CommonDependencies/Server/sdk/: CMakeLists.txt
CommonDependencies/Status/: CMakeLists.txt
CommonDependencies/Status/Include/: vssver2.scc
CommonDependencies/Status/Lib/: Status.lib
CommonDependencies/Status/Proj/: vssver2.scc
CommonDependencies/Status/Src/: UdpClient.cpp  vssver2.scc
CommonDependencies/Util/: CMakeLists.txt
CommonDependencies/Util/include/: TableData.h  TerrainData.h  algo.h  db.h  db3.h  log.h  pch.h  singleton.h
CommonDependencies/Util/lib/: util.idb  utild.idb
CommonDependencies/Util/logvwr/: vssver2.scc
CommonDependencies/Util/proj/: util.ncb
CommonDependencies/Util/src/: MapDataVer.cpp  MapUtil.cpp  algo.cpp  db.cpp  db3.cpp  log.cpp  log2.cpp  logutil.h  packet.cpp  packet.h  playsound.cpp  util2.cpp
Server/AccountServer/: CMakeLists.txt
Server/AccountServer/Configuration/: AccountServer.cfg
Server/AccountServer/Proj/: AccountServer.sln  AccountServer.sln.old  AccountServer.suo.old  AccountServer.vcproj.7.10.old
Server/AccountServer/include/: AccountServer2.h  DataBaseCtrl.h  GlobalVariable.h
Server/AccountServer/src/: AccountServer2.cpp  DataBaseCtrl.cpp  DataBaseCtrl.h  GlobalVariable.cpp  GlobalVariable.h  TomService.cpp  TomService.h  main.cpp
Server/GameServer/: CMakeLists.txt
Server/GameServer/Configuration/: ChaNameFilter.txt  GameServer.cfg
Server/GameServer/include/: CharTrade.h  Character.h  Config.h  Entity.h  Expand.h  FightAble.h  GameApp.h  GameDB.h  GameServerApp.h  MgrUnitEx.h  NPC.h  Parser.h  Player.h  Range.h  SkillState.h  StateCell.h  SystemDialog.h  Timer.h  TradeLogDB.h  lua_gamectrl.h
Server/GameServer/src/: CharBoat.cpp  CharScript.cpp  CharStall.cpp  (+33 more)
Server/GateServer/: CMakeLists.txt
Server/GroupServer/: CMakeLists.txt
(+162 files in other folders)
